[package]
name = "notus"
version = "0.1.0"
authors = ["mambisi <lilbizi96@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crc = "2.0.0-rc.1"
anyhow = "1.0.38"
chrono = "0.4"
fs_extra = "1.2.0"
fs2 = "0.4.3"
